# Open-Design

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.dev  Dockerfile.web  README.md  docker-compose.dev.yml  docker-compose.yml  litellm-config.yaml  package.json  playwright.config.ts  playwright.docker.config.ts  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  asset-storage.ts  chat-provider.ts  generation-refine.ts  generation-variations.ts  generation.ts  image-provider.ts  index.ts  llm-client.ts  persistence.ts  site-capture.ts
apps/api/tests/: artifact-images.test.ts  artifact-remix.test.ts  artifact-theme.test.ts  assets.test.ts  auth-bridge.test.ts  auth.test.ts  chat.test.ts  design-systems.test.ts  generation-extras.test.ts  generation.test.ts  health.test.ts  projects-artifacts.test.ts  repositories.test.ts  site-capture.test.ts
apps/desktop/: README.md  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  env.ts  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.local.example  next.config.ts  package.json  tsconfig.json
apps/web/app/: client-providers.tsx  fonts.ts  globals.css  i18n-provider.tsx  layout.tsx  motion.css  page.tsx  tokens.css
apps/web/components/: artifact-preview.tsx  auth-panel.tsx  command-palette-provider.tsx  (+27 more)
docs/: claude-design-parity.md  design-system.md  master-todo.md
(+102 files in other folders)
