[package]
name = "opendesign-studio"
version = "0.1.0"
description = "OpenDesign Studio desktop shell"
authors = ["OpenDesign Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "opendesign_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds and dev-mode compilation.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
devtools = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
